Updated code for new database

--- a/templates/search_results.jinja
+++ b/templates/search_results.jinja
@@ -6,9 +6,9 @@
       <thead>
         <tr>
           <th data-field="room_number">Room Number</th>
+          <th data-field="location">Location</th>
           <th data-field="category">Category</th>
           <th data-field="cost_per_day">Cost Per Day</th>
-          <th data-field="location">Category</th>
           <th data-field="cost_extra_bed_per_day">Cost of Extra Bed Per Day</th>
           <th data-field="persons_allowed">Persons Allowed</th>
           <th data-field="select_extra_bed">Select Extra Bed</th>
@@ -19,12 +19,12 @@
         <tbody>
           {% for row in rooms %}
             <tr>
+              <td>{{row[0]}}</td>
               <td>{{row[1]}}</td>
               <td>{{row[2]}}</td>
               <td>{{row[3]}}</td>
               <td>{{row[4]}}</td>
               <td>{{row[5]}}</td>
-              <td>{{row[6]}}</td>
               <td><p><input type="checkbox" id="{{row[0]}}_extra" name="extra_beds" value="{{row[0]}}" /><label for="{{row[0]}}_extra"></label></p></td>
               <td><p><input type="checkbox" id="{{row[0]}}" name="rooms" value="{{row[0]}}" /><label for="{{row[0]}}"></label></p></td>
             </tr>
