--- a/templates/search_results.jinja
+++ b/templates/search_results.jinja
@@ -15,7 +15,7 @@
           <th data-field="select_room">Select Room</th>
         </tr>
       </thead>
-      <form method="post" class="col s12" action="select_results">
+      <form method="post" class="col s12" action="payment_form">
         <tbody>
           {% for row in rooms %}
             <tr>
