--- a/templates/payment_form.jinja
+++ b/templates/payment_form.jinja
@@ -2,7 +2,7 @@
 {% block content %}
   <h5>Payment Form</h5>
   <div class="row">
-    <form method="post" class="col s12">
+    <form method="post" class="col s12" action="make_reservation">
       <div class="row">
         <div class="input-field col s3">
           <br>
@@ -11,11 +11,12 @@
           <select name="credit_card" class="browser-default">
             <option value="" disabled selected>Choose your option</option>
             {% for row in credit_cards %}
-              <option value={{row[0]}}>{{row[1]}}</option>
+              <option value="{{row[0]}}">{{row[1]}}</option>
             {% endfor %}
           </select>
         </div>
         <div class="col s3">
+          <br>
           <br>
           <br>
           <p><a href="/add_card">Add a new card</a></p>
@@ -30,12 +31,16 @@
         </div>
       </div>
       <div class="row">
-        <p>Total: {{total}}</p>
+        <div class="col s3">
+          <p>Total: {{total}}</p>
+        </div>
       </div>
       <div class="row">
-        <button class="btn waves-effect waves-light" type="submit">Submit
-          <i class="material-icons right">send</i>
-        </button>
+        <div class="col s3">
+          <button class="btn waves-effect waves-light" type="submit">Submit
+            <i class="material-icons right">send</i>
+          </button>
+        </div>
       </div>
     </form>
   </div>
