Added page to display the customer's reservation id

--- a/templates/payment_form.jinja
+++ b/templates/payment_form.jinja
@@ -32,7 +32,7 @@
       </div>
       <div class="row">
         <div class="col s3">
-          <p>Total: {{total}}</p>
+          <p>Total: ${{total}}</p>
         </div>
       </div>
       <div class="row">
