Updated add_card to work from anywhere, and implemented delete card

--- a/templates/base.jinja
+++ b/templates/base.jinja
@@ -13,6 +13,7 @@
     {% block nav_bar %}
     <li><a href="/">Home</a><li>
     <li><a href="/search_rooms">Make a Reservation</a></li>
+    <li><a href="/add_card">Add Card</a></li>
     {% endblock %}
   {%- endmacro %}
   <nav>
