--- a/templates/base.jinja
+++ b/templates/base.jinja
@@ -14,11 +14,12 @@
     <li><a href="/">Home</a><li>
     <li><a href="/search_rooms">Make a Reservation</a></li>
     <li><a href="/add_card">Add Card</a></li>
+    <li><a href="cancel_search">Cancel Reservation</a></li>
     {% endblock %}
   {%- endmacro %}
   <nav>
     <div class="nav-wrapper">
-      <a href="/" class="brand-logo center">Fancy Hotel</a>
+      <a href="/" class="brand-logo right">Fancy Hotel</a>
       <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
       <ul class="left hide-on-med-and-down">
         {{nav_links()}}
