--- a/templates/cancel_results.jinja
+++ b/templates/cancel_results.jinja
@@ -41,10 +41,25 @@
     </table>
   </div>
   <div class="row">
+    <div class="col s3">
+      <p>Total Cost of Reservation: {{total}}</p>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col s3">
+      <p>Date of Cancellation: {{todays_date}}</p>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col s3">
+      <p>Amount to be Refunded: {{refund}}</p>
+    </div>
+  </div>
+  <div class="row">
     <form method="post" class="col s12" action="/cancel_reservation">
       <div class="row">
         <div class="input-field col s6">
-          <button class="btn waves-effect waves-light" type="submit">Cancel
+          <button class="btn waves-effect waves-light" type="submit" name="reservation_id" value="{{reservation_id}}">Cancel
             <i class="material-icons right">send</i>
           </button>
         </div>
