Added update_reservation page

--- a/templates/base.jinja
+++ b/templates/base.jinja
@@ -14,7 +14,8 @@
     <li><a href="/">Home</a><li>
     <li><a href="/search_rooms">Make a Reservation</a></li>
     <li><a href="/add_card">Add Card</a></li>
-    <li><a href="cancel_search">Cancel Reservation</a></li>
+    <li><a href="/update_search">Update Reservation</a></li>
+    <li><a href="/cancel_search">Cancel Reservation</a></li>
     {% endblock %}
   {%- endmacro %}
   <nav>
