--- a/templates/cancel_search.jinja
+++ b/templates/cancel_search.jinja
@@ -1,6 +1,6 @@
 {% extends "base.jinja" %}
 {% block content %}
-  <h5>Cancel Reservation</h5>
+  <h5>{{type}} Reservation</h5>
   <div class="row">
     <form method="post" class="col s12">
       <div class="row">
