Modified code to only allow customers to create usernames of the proper format

--- a/templates/index_login.jinja
+++ b/templates/index_login.jinja
@@ -4,6 +4,8 @@
 {% endblock %}
 {% block content %}
   <h5>Login</h5>
+  <br>
+  <p>Your username must follow the format 'Cnnnnnnn', i.e C544, C67777, and so on</p>
   <div class="row">
     <form method="post" class="col s12">
       <div class="row">
