--- a/templates/base.jinja
+++ b/templates/base.jinja
@@ -16,6 +16,7 @@
     <li><a href="/add_card">Add Card</a></li>
     <li><a href="/update_search">Update Reservation</a></li>
     <li><a href="/cancel_search">Cancel Reservation</a></li>
+    <li><a href="/view_reviews">View Reviews</a></li>
     {% endblock %}
   {%- endmacro %}
   <nav>
