--- a/templates/add_review.jinja
+++ b/templates/add_review.jinja
@@ -1,6 +1,6 @@
 {% extends "base.jinja" %}
 {% block content %}
-  <h5>Select Desired Reviews Location</h5>
+  <h5>Add Review</h5>
   <div class="row">
     <form method="post" class="col s12">
       <div class="row">
@@ -14,6 +14,18 @@
               <option value={{row[0]}}>{{row[0]}}</option>
             {% endfor %}
           </select>
+        </div>
+      </div>
+      <div class="row">
+        <div class="input-field col s3">
+          <input id="icon_prefix" type="text" name="rating" class="validate">
+          <label for="icon_prefix">Rating (Less than 20 Characters)</label>
+        </div>
+      </div>
+      <div class="row">
+        <div class="input-field col s12">
+          <textarea id="textarea1" class="materialize-textarea" name="review"></textarea>
+          <label for="textarea1">Review</label>
         </div>
       </div>
       <div class="row">
