--- a/templates/base.jinja
+++ b/templates/base.jinja
@@ -17,6 +17,7 @@
     <li><a href="/update_search">Update Reservation</a></li>
     <li><a href="/cancel_search">Cancel Reservation</a></li>
     <li><a href="/view_reviews">View Reviews</a></li>
+    <li><a href="/add_review">Add Review</a></li>
     {% endblock %}
   {%- endmacro %}
   <nav>
