--- a/templates/view_reviews.jinja
+++ b/templates/view_reviews.jinja
@@ -5,9 +5,9 @@
   </div>
   {% for row in reviews %}
   <div class="row">
-    <div class="col s12 m6 center">
-      <div class="card white-grey darken-1">
-        <div class="card-content">
+    <div class="col s12 m6 offset-m3">
+      <div class="card blue-grey darken-1 center">
+        <div class="card-content white-text">
           <span class="card-title">Rating: {{row[0]}}</span>
           <p>{{row[1]}}</p>
         </div>
