Modified choice box text

--- a/templates/add_review.jinja
+++ b/templates/add_review.jinja
@@ -9,7 +9,7 @@
           <br>
           <label>Location</label>
           <select name="location" class="browser-default">
-            <option value="" disabled selected>Choose your option</option>
+            <option value="" disabled selected>Choose location</option>
             {% for row in locations %}
               <option value={{row[0]}}>{{row[0]}}</option>
             {% endfor %}
