Added dollar signs. Think I got all of them now.

--- a/templates/cancel_results.jinja
+++ b/templates/cancel_results.jinja
@@ -28,8 +28,8 @@
             <td>{{row[0]}}</td>
             <td>{{row[1]}}</td>
             <td>{{row[2]}}</td>
-            <td>{{row[3]}}</td>
-            <td>{{row[4]}}</td>
+            <td>${{row[3]}}</td>
+            <td>${{row[4]}}</td>
             {% if row[5] == 1 %}
               <td><p><input type="checkbox" id="{{row[0]}}_extra" name="extra_beds" checked="checked" disabled="disabled" /><label for="{{row[0]}}_extra"></label></p></td>
             {% else %}
@@ -42,7 +42,7 @@
   </div>
   <div class="row">
     <div class="col s3">
-      <p>Total Cost of Reservation: {{total}}</p>
+      <p>Total Cost of Reservation: ${{total}}</p>
     </div>
   </div>
   <div class="row">
@@ -52,7 +52,7 @@
   </div>
   <div class="row">
     <div class="col s3">
-      <p>Amount to be Refunded: {{refund}}</p>
+      <p>Amount to be Refunded: ${{refund}}</p>
     </div>
   </div>
   <div class="row">
