--- a/templates/search_results.jinja
+++ b/templates/search_results.jinja
@@ -22,8 +22,8 @@
               <td>{{row[0]}}</td>
               <td>{{row[1]}}</td>
               <td>{{row[2]}}</td>
-              <td>{{row[3]}}</td>
-              <td>{{row[4]}}</td>
+              <td>${{row[3]}}</td>
+              <td>${{row[4]}}</td>
               <td>{{row[5]}}</td>
               <td><p><input type="checkbox" id="{{row[0]}}_extra" name="extra_beds" value="{{row[0]}}" /><label for="{{row[0]}}_extra"></label></p></td>
               <td><p><input type="checkbox" id="{{row[0]}}" name="rooms" value="{{row[0]}}" /><label for="{{row[0]}}"></label></p></td>
