Added ability for the manager to login and only see the reports features, and not anything else

--- a/templates/popular_room_category_report.jinja
+++ b/templates/popular_room_category_report.jinja
@@ -1,6 +1,6 @@
-{% extends "base.jinja" %}
+{% extends "manager_base.jinja" %}
 {% block content %}
-  <h5>Popular Room Category Report</h5>
+  <h5>View Popular Room Category Report</h5>
   <div class="row">
     <table class="striped centered">
       <thead>
