--- a/templates/view_reservations_report.jinja
+++ b/templates/view_reservations_report.jinja
@@ -1,4 +1,4 @@
-{% extends "base.jinja" %}
+{% extends "manager_base.jinja" %}
 {% block content %}
   <h5>View Reservations Report</h5>
   <div class="row">
