--- a/templates/view_reviews.jinja
+++ b/templates/view_reviews.jinja
@@ -6,7 +6,7 @@
   {% for row in reviews %}
   <div class="row">
     <div class="col s12 m6 offset-m3">
-      <div class="card blue-grey darken-1 center">
+      <div class="card red lighten-2 center">
         <div class="card-content white-text">
           <span class="card-title">Rating: {{row[0]}}</span>
           <p>{{row[1]}}</p>
