--- a/templates/base.jinja
+++ b/templates/base.jinja
@@ -13,7 +13,7 @@
     {% block nav_bar %}
     <li><a href="/">Home</a><li>
     <li><a href="/search_rooms">Make a Reservation</a></li>
-    <li><a href="/add_card">Add Card</a></li>
+    <li><a href="/add_card">Add/Delete Card</a></li>
     <li><a href="/update_search">Update Reservation</a></li>
     <li><a href="/cancel_search">Cancel Reservation</a></li>
     <li><a href="/view_reviews">View Reviews</a></li>
